2008-01-09 11:24 +0100  Rocco Rutte  <pdmef@gmx.net>  (0a9a5519a722)

	* init.h: Mention $recall in description for $postpone

2008-01-02 11:47 -0800  Johan Svedberg  <johan@svedberg.com>  (3cf8bc21bc3d)

	* ChangeLog, po/sv.po: Updated Swedish translation

2007-12-11 15:22 +0100  Rocco Rutte  <pdmef@gmx.net>  (68a9c3e74f9a)

	* doc/manual.xml.head: Manual: Update caching docs (hcache naming,
	maintenance)

2007-12-11 14:58 +0100  Rocco Rutte  <pdmef@gmx.net>  (d6e0b6f1f8ff)

	* ChangeLog, pop.c: POP: Name hcache the way IMAP does. Place the file
	under $header_cache/<url>/mutt.hcache. For now ignore that this may
	break if hcache == bcache and a message's uid is "mutt.hcache"
	(extremely unlikely) in which case the user will loose only the
	hcache file.

2007-12-11 14:50 +0100  Rocco Rutte  <pdmef@gmx.net>  (f19984dcfacb)

	* pop.c: POP: Respect $message_cache_clean

2007-12-11 14:49 +0100  Rocco Rutte  <pdmef@gmx.net>  (2707a97e0deb)

	* doc/manual.xml.head: Manual: mention $time_inc in tuning chapter

2007-12-11 13:12 +0100  Rocco Rutte  <pdmef@gmx.net>  (9709d244c64b)

	* ChangeLog, enter.c, history.h: Maintain different history lists for
	files and mailboxes. Closes #2999.

2007-12-11 13:08 +0100  Rocco Rutte  <pdmef@gmx.net>  (35d778452444)

	* history.c: Do not trust history file and mutt code about history
	class. This prevents crashes as result of programming errors and/or
	wrong history file (e.g. negative or too high classes).

2007-12-08 12:54 -0800  Michael Elkins  <me@mutt.org>  (3971bcfd9112)

	* mh.c: Skip over messages which were previously parsed after sorting
	the tail of the list. Avoids a segmentation fault when rescanning
	the new/ subdir of a maildir when messages were left over from a
	previous scan.

2007-12-07 11:38 -0800  Rocco Rutte  <pdmef@gmx.net>  (b891b1736885)

	* ChangeLog, lib.c, md5.h: Check definition of ENOTSUP before use
	(closes #2983)

2007-12-07 13:09 +0100  Rocco Rutte  <pdmef@gmx.net>  (468b9c86b0df)
